--- a/shared.gradle
+++ b/shared.gradle
@@ -11,6 +11,7 @@ ext.versions = [
         frameworktest       : '0.1.0-BUILD-SNAPSHOT',
         frameworkasync      : '0.1.0-BUILD-SNAPSHOT',
         frameworkaccounting : '0.1.0-BUILD-SNAPSHOT',
+        mifosrhythm         : '0.1.0-BUILD-SNAPSHOT',
         validator    : '5.3.0.Final',
         javamoneylib : '0.9-SNAPSHOT'
 ]
