Fixing header code to avoid copyright ownership misunderstandings.

--- a/shared.gradle
+++ b/shared.gradle
@@ -70,5 +70,6 @@ license {
         uxf = 'XML_STYLE'
     }
     ext.year = Calendar.getInstance().get(Calendar.YEAR)
-    ext.name = 'The Mifos Initiative'
+    ext.name = 'Kuelap, Inc'
+    skipExistingHeaders true
 }
