--- a/shared.gradle
+++ b/shared.gradle
@@ -14,7 +14,8 @@ ext.versions = [
         mifosrhythm         : '0.1.0-BUILD-SNAPSHOT',
         mifoscustomer       : '0.1.0-BUILD-SNAPSHOT',
         validator    : '5.3.0.Final',
-        javamoneylib : '0.9-SNAPSHOT'
+        javamoneylib : '0.9-SNAPSHOT',
+        expiringmap         : '0.5.8'
 ]
 
 apply plugin: 'java'
