--- a/service/build.gradle
+++ b/service/build.gradle
@@ -31,19 +31,19 @@ dependencies {
             [group: 'org.springframework.cloud', name: 'spring-cloud-starter-eureka'],
             [group: 'org.springframework.cloud', name: 'spring-cloud-spring-service-connector'],
             [group: 'org.springframework.boot', name: 'spring-boot-starter-jetty'],
-            [group: 'io.mifos.portfolio', name: 'api', version: project.version],
-            [group: 'io.mifos.rhythm', name: 'spi', version: versions.mifosrhythm],
-            [group: 'io.mifos.rhythm', name: 'api', version: versions.mifosrhythm],
-            [group: 'io.mifos.accounting', name: 'api', version: versions.frameworkaccounting],
-            [group: 'io.mifos.anubis', name: 'library', version: versions.frameworkanubis],
-            [group: 'io.mifos.customer', name: 'api', version: versions.mifoscustomer],
+            [group: 'org.apache.fineract.cn.portfolio', name: 'api', version: project.version],
+            [group: 'org.apache.fineract.cn.rhythm', name: 'spi', version: versions.mifosrhythm],
+            [group: 'org.apache.fineract.cn.rhythm', name: 'api', version: versions.mifosrhythm],
+            [group: 'org.apache.fineract.cn.accounting', name: 'api', version: versions.frameworkaccounting],
+            [group: 'org.apache.fineract.cn.anubis', name: 'library', version: versions.frameworkanubis],
+            [group: 'org.apache.fineract.cn.customer', name: 'api', version: versions.mifoscustomer],
             [group: 'com.google.code.gson', name: 'gson'],
-            [group: 'io.mifos.core', name: 'api', version: versions.frameworkapi],
-            [group: 'io.mifos.core', name: 'lang', version: versions.frameworklang],
-            [group: 'io.mifos.core', name: 'async', version: versions.frameworkasync],
-            [group: 'io.mifos.core', name: 'cassandra', version: versions.frameworkcassandra],
-            [group: 'io.mifos.core', name: 'mariadb', version: versions.frameworkmariadb],
-            [group: 'io.mifos.core', name: 'command', version: versions.frameworkcommand],
+            [group: 'org.apache.fineract.cn', name: 'api', version: versions.frameworkapi],
+            [group: 'org.apache.fineract.cn', name: 'lang', version: versions.frameworklang],
+            [group: 'org.apache.fineract.cn', name: 'async', version: versions.frameworkasync],
+            [group: 'org.apache.fineract.cn', name: 'cassandra', version: versions.frameworkcassandra],
+            [group: 'org.apache.fineract.cn', name: 'mariadb', version: versions.frameworkmariadb],
+            [group: 'org.apache.fineract.cn', name: 'command', version: versions.frameworkcommand],
             [group: 'org.hibernate', name: 'hibernate-validator', version: versions.validator],
             [group: 'org.javamoney.lib', name: 'javamoney-calc', version: versions.javamoneylib],
             [group: 'javax.money', name: 'money-api', version: '1.0.1'],
