--- a/service/build.gradle
+++ b/service/build.gradle
@@ -50,11 +50,11 @@ dependencies {
             [group: 'org.springframework.cloud', name: 'spring-cloud-spring-service-connector'],
             [group: 'org.springframework.boot', name: 'spring-boot-starter-jetty'],
             [group: 'org.apache.fineract.cn.portfolio', name: 'api', version: project.version],
-            [group: 'org.apache.fineract.cn.rhythm', name: 'spi', version: versions.mifosrhythm],
-            [group: 'org.apache.fineract.cn.rhythm', name: 'api', version: versions.mifosrhythm],
-            [group: 'org.apache.fineract.cn.accounting', name: 'api', version: versions.frameworkaccounting],
+            [group: 'org.apache.fineract.cn.rhythm', name: 'spi', version: versions.fineractcnrhythm],
+            [group: 'org.apache.fineract.cn.rhythm', name: 'api', version: versions.fineractcnrhythm],
+            [group: 'org.apache.fineract.cn.accounting', name: 'api', version: versions.fineractcnaccounting],
             [group: 'org.apache.fineract.cn.anubis', name: 'library', version: versions.frameworkanubis],
-            [group: 'org.apache.fineract.cn.customer', name: 'api', version: versions.mifoscustomer],
+            [group: 'org.apache.fineract.cn.customer', name: 'api', version: versions.fineractcncustomer],
             [group: 'com.google.code.gson', name: 'gson'],
             [group: 'org.apache.fineract.cn', name: 'api', version: versions.frameworkapi],
             [group: 'org.apache.fineract.cn', name: 'lang', version: versions.frameworklang],
