--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -34,6 +34,18 @@
 # limitations under the License.
 #
 
+spring:
+  cloud:
+    discovery:
+      enabled: false
+    config:
+      enabled: false
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/playground
+    username: postgres
+    password: postgres
+
 eureka:
   client:
     serviceUrl:
@@ -54,13 +66,13 @@ cassandra:
     write: LOCAL_QUORUM
     delete: LOCAL_QUORUM
 
-mariadb:
-  driverClass: org.mariadb.jdbc.Driver
+postgresql:
+  driverClass: org.postgresql.Driver
   database: seshat
   host: localhost
-  port: 3306
-  user: root
-  password: mysql
+  port: 5432
+  user: postgres
+  password: postgres
 
 bonecp:
   idleMaxAgeInMinutes: 240
