FINCN-183 add homePageUrl to configuration

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -46,7 +46,7 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
   instance:
-    preferIpAddress: true
+    homePageUrl: "http://${eureka.hostname}:2026/portfolio/v1/"
 
 server:
   port: 2026
