--- a/shared.gradle
+++ b/shared.gradle
@@ -16,20 +16,20 @@
  */
 
 group 'org.apache.fineract.cn.portfolio'
-version '0.1.0-BUILD-SNAPSHOT'
+version '0.1.x-SNAPSHOT'
 
 ext.versions = [
-        frameworkanubis      : '0.1.0-BUILD-SNAPSHOT',
-        frameworkapi         : '0.1.0-BUILD-SNAPSHOT',
-        frameworklang        : '0.1.0-BUILD-SNAPSHOT',
-        frameworkpostgresql  : '0.1.0-BUILD-SNAPSHOT',
-        frameworkcassandra   : '0.1.0-BUILD-SNAPSHOT',
-        frameworkcommand     : '0.1.0-BUILD-SNAPSHOT',
-        frameworktest        : '0.1.0-BUILD-SNAPSHOT',
-        frameworkasync       : '0.1.0-BUILD-SNAPSHOT',
-        fineractcnaccounting : '0.1.0-BUILD-SNAPSHOT',
-        fineractcnrhythm     : '0.1.0-BUILD-SNAPSHOT',
-        fineractcncustomer   : '0.1.0-BUILD-SNAPSHOT',
+        frameworkanubis      : '0.1.x-SNAPSHOT',
+        frameworkapi         : '0.1.x-SNAPSHOT',
+        frameworklang        : '0.1.x-SNAPSHOT',
+        frameworkpostgresql  : '0.1.x-SNAPSHOT',
+        frameworkcassandra   : '0.1.x-SNAPSHOT',
+        frameworkcommand     : '0.1.x-SNAPSHOT',
+        frameworktest        : '0.1.x-SNAPSHOT',
+        frameworkasync       : '0.1.x-SNAPSHOT',
+        fineractcnaccounting : '0.1.x-SNAPSHOT',
+        fineractcnrhythm     : '0.1.x-SNAPSHOT',
+        fineractcncustomer   : '0.1.x-SNAPSHOT',
         validator            : '5.3.0.Final',
         javamoneylib         : '0.9-SNAPSHOT',
         expiringmap          : '0.5.8'
@@ -62,7 +62,7 @@ ext['spring-data-releasetrain.version'] = 'Gosling-SR2A'
 dependencies {
     compile(
             [group: 'com.google.code.findbugs', name: 'jsr305'],
-            [group: 'org.apache.fineract.cn', name: 'postgresql', version: '0.1.0-BUILD-SNAPSHOT']
+            [group: 'org.apache.fineract.cn', name: 'postgresql', version: '0.1.x-SNAPSHOT']
     )
 
     testCompile(
