--- a/component-test/build.gradle
+++ b/component-test/build.gradle
@@ -30,10 +30,11 @@ buildscript {
 }
 
 plugins {
-    id 'com.github.hierynomus.license' version '0.13.1'
-    id("org.nosphere.apache.rat") version "0.5.2"
-    id "com.jfrog.artifactory" version "4.9.5"
-    id "org.springframework.boot" version "1.4.3.RELEASE"
+    id 'com.github.hierynomus.license' version '0.15.0'
+    id 'org.nosphere.apache.rat' version '0.6.0'
+    id 'com.jfrog.artifactory' version '4.15.1'
+    id "io.spring.dependency-management" version "1.0.9.RELEASE"
+    id 'org.springframework.boot' version '2.2.6.RELEASE'
     id 'maven-publish'
     id 'java'
 }
@@ -43,7 +44,7 @@ apply from: '../shared.gradle'
 apply plugin: 'org.asciidoctor.convert'
 
 
-bootRepackage {
+bootJar {
     enabled = false
 }
 
@@ -70,6 +71,10 @@ asciidoctor {
     options backend: "html", doctype: "book"
     attributes "source-highlighter": "highlightjs", \
                 'snippets': file('build/doc/generated-snippets/')
+}
+
+jar {
+    enabled = true
 }
 
 publishing {
