--- a/shared.gradle
+++ b/shared.gradle
@@ -16,21 +16,21 @@
  */
 
 group 'org.apache.fineract.cn.portfolio'
-version '0.1.0-BUILD-SNAPSHOT'
+version 'spring_boot_2-SNAPSHOT'
 
 ext.versions = [
-        frameworkanubis      : '0.1.0-BUILD-SNAPSHOT',
-        frameworkapi         : '0.1.0-BUILD-SNAPSHOT',
-        frameworklang        : '0.1.0-BUILD-SNAPSHOT',
-        frameworkpostgresql  : '0.1.0-BUILD-SNAPSHOT',
-        frameworkcassandra   : '0.1.0-BUILD-SNAPSHOT',
-        frameworkcommand     : '0.1.0-BUILD-SNAPSHOT',
-        frameworktest        : '0.1.0-BUILD-SNAPSHOT',
-        frameworkasync       : '0.1.0-BUILD-SNAPSHOT',
-        fineractcnaccounting : '0.1.0-BUILD-SNAPSHOT',
-        fineractcnrhythm     : '0.1.0-BUILD-SNAPSHOT',
-        fineractcncustomer   : '0.1.0-BUILD-SNAPSHOT',
-        validator            : '5.3.0.Final',
+        frameworkanubis      : 'spring_boot_2-SNAPSHOT',
+        frameworkapi         : 'spring_boot_2-SNAPSHOT',
+        frameworklang        : 'spring_boot_2-SNAPSHOT',
+        frameworkpostgresql  : 'spring_boot_2-SNAPSHOT',
+        frameworkcassandra   : 'spring_boot_2-SNAPSHOT',
+        frameworkcommand     : 'spring_boot_2-SNAPSHOT',
+        frameworktest        : 'spring_boot_2-SNAPSHOT',
+        frameworkasync       : 'spring_boot_2-SNAPSHOT',
+        fineractcnaccounting : 'spring_boot_2-SNAPSHOT',
+        fineractcnrhythm     : 'spring_boot_2-SNAPSHOT',
+        fineractcncustomer   : 'spring_boot_2-SNAPSHOT',
+        validator            : '6.1.4.Final',
         javamoneylib         : '0.9-SNAPSHOT',
         expiringmap          : '0.5.8'
 ]
@@ -62,7 +62,7 @@ ext['spring-data-releasetrain.version'] = 'Gosling-SR2A'
 dependencies {
     compile(
             [group: 'com.google.code.findbugs', name: 'jsr305'],
-            [group: 'org.apache.fineract.cn', name: 'postgresql', version: '0.1.0-BUILD-SNAPSHOT']
+            [group: 'org.apache.fineract.cn', name: 'postgresql', version: 'spring_boot_2-SNAPSHOT']
     )
 
     testCompile(
@@ -115,6 +115,10 @@ rat {
             "**/build/**",
             "gradlew",
             "gradlew.bat",
-            "README.md"
+            "README.md",
+            ".classpath",
+            ".project",
+            ".settings/**",
+            "**/bin/**"
     ]
 }
